final spacing and padding fixes

--- a/src/app/participate/participate.component.scss
+++ b/src/app/participate/participate.component.scss
@@ -49,6 +49,7 @@ mat-form-field.full-width {
     text-decoration: none;
   }
   @media (max-width: 800px) {
+    margin-top: -50px;
     margin-left: 4px;
     padding: 30px;
   }
